Terminé la vista contacto y agregué foto a la vista home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-3">
         <div class="card">
             <div class="card-header text-white">Sobre mi...</div>
                 <div class="card-body">
@@ -8,7 +8,10 @@
                     en aplicaciones enfocadas a dar solución a las distintas necesidades de mis clientes, a través de aplicaciones 
                     dinámmicas, responsivas e intuitivas. <br><br>
                     <cite title="Source Title">Puedes revisar mi trabajo en la sección Proyectos</cite></footer>
-                    </blockquote>
+                    </blockquote><br>                    
                 </div>
-        </div>       
+        </div> 
+</div>
+<div class="d-flex justify-content-center mt-4">
+    <img class="foto-personal d-block mt-3" <%= image_tag "Foto.jpg" %>>  
 </div>
