--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,10 +45,10 @@
         <div class="card text-center">
           
             <div class="card-body">
-              <h5 class="card-title">Paula Aguiló 2023. Todos los derechos reservados.</h5>
+              <h5 class="card-title text-secondary">Paula Aguiló 2023. Todos los derechos reservados.</h5>
               
              <div class="d-flex justify-content-center mt-3">
-                    <i class="fa-brands fa-square-facebook fa-4x mx-2 text-secondary"></i>
+                    <i class="fa-brands fa-square-facebook fa-4x mx-2 text-secondary" ></i>
                     <i class="fa-brands fa-square-instagram fa-4x mx-2 text-secondary"></i>
                     <i class="fa-brands fa-square-whatsapp fa-4x mx-2 text-secondary"></i>                 
             </div>  
