--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div class="container mt-3">
+        <div class="card">
+            <div class="card-header text-white">Contáctame...</div>
+                <div class="card-body">
+                    <blockquote class="blockquote text-center mb-0">
+                    <p>¿Necesitas un sitio web?</p>
+                    <p>¿Tienes una idea que podría agilizar el funcionamiento de tu negocio, pero no sabes cómo llevarla a cabo?</p>
+                    <p>¿Te gustaría facilitar la gestión de negocio?</p>
+                    <footer class="blockquote-footer text-center mt-4 fs-5">Conversemos!!! <br> Puedo satisfacer las necesidades
+                    informáticas de tu negocio...<br> Si pudes simplificar tu gestión de negocio... ¿por qué no hacerlo? <br><br>
+                    <cite title="Source Title"></cite></footer>
+                    </blockquote><br>                    
+                </div>
+        </div> 
+</div>
