Agregué links a los íconos de contacto del footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
               <a class="nav-link text-white" href="/pages/projects">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/pages/contact">Contactos</a>
+              <a class="nav-link text-white" href="/pages/contact">Contacto</a>
             </li>       
           </ul>
         </div>
@@ -48,9 +48,15 @@
               <h5 class="card-title text-secondary">Paula Aguiló 2023. Todos los derechos reservados.</h5>
               
              <div class="d-flex justify-content-center mt-3">
-                    <i class="fa-brands fa-square-facebook fa-4x mx-2 text-secondary" ></i>
+                  <a href="https://web.facebook.com/paulaaguilo.com" target="_blank">
+                    <i class="fa-brands fa-square-facebook fa-4x mx-2 text-secondary"></i>
+                  </a>
+                  <a href="https://instagram.com/paguilos81?igshid=YmMyMTA2M2Y=" target="_blank">
                     <i class="fa-brands fa-square-instagram fa-4x mx-2 text-secondary"></i>
-                    <i class="fa-brands fa-square-whatsapp fa-4x mx-2 text-secondary"></i>                 
+                  </a>  
+                  <a href="https://wa.me/message/YASECVFZPGS3B1" target="_blank">                    
+                    <i class="fa-brands fa-square-whatsapp fa-4x mx-2 text-secondary"></i>      
+                  </a>           
             </div>  
             <div class="card-header mt-3"></div>        
       </div>
