--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -12,23 +12,23 @@
         </div>        
         <div class="carousel-inner mt-4">
             <div class="carousel-item active">
-                <img class="carousel-image d-block w-100" <%= image_tag "Picture1.png" %>>   
+                <img class="carousel-image d-block w-100 img-fluid" <%= image_tag "Picture1.png" %>>   
                 <div class="carousel-caption d-none d-md-block"></div> 
             </div>       
             <div class="carousel-item">
-                    <img class="carousel-image d-block w-100" <%= image_tag "Picture2.png" %>>
+                    <img class="carousel-image d-block w-100 img-fluid" <%= image_tag "Picture2.png" %>>
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
-                    <img class="carousel-image d-block w-100" <%= image_tag "Picture5.png" %>>
+                    <img class="carousel-image d-block w-100 img-fluid" <%= image_tag "Picture5.png" %>>
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
-                    <img class="carousel-image d-block w-100" <%= image_tag "Picture3.png" %>>
+                    <img class="carousel-image d-block w-100 img-fluid" <%= image_tag "Picture3.png" %>>
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
-                    <img class="carousel-image d-block w-100" <%= image_tag "Picture4.png" %>>
+                    <img class="carousel-image d-block w-100 img-fluid" <%= image_tag "Picture4.png" %>>
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
         </div>
